// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/NavActionButtonPresenter  1`] = `
.emotion-1 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

<button
  className="emotion-1"
  disabled={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  tabIndex="0"
  title=""
>
  <svg
    className="emotion-0"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      list-24
    </title>
    <path
      d="M5.08 10h-3v4h3A.94.94 0 0 0 6 13v-2a.94.94 0 0 0-.88-1zM5 13H3v-2h2zm.08-10h-3v4h3A.94.94 0 0 0 6 6V4a.94.94 0 0 0-.88-1zM5 6H3V4h2zm.08 11h-3v4h3A.94.94 0 0 0 6 20v-2a.94.94 0 0 0-.88-1zM5 20H3v-2h2zM21 6H8V4h13zm.08-3H7v4h14.08A.94.94 0 0 0 22 6V4a.94.94 0 0 0-.88-1zM21 20H8v-2h13zm.08-3H7v4h14.08a.94.94 0 0 0 .92-1v-2a.94.94 0 0 0-.88-1zm0-7H7v4h14.08a.94.94 0 0 0 .92-1v-2a.94.94 0 0 0-.88-1zM21 13H8v-2h13z"
    />
  </svg>
</button>
`;

exports[`top-nav/presenters/NavActionButtonPresenter  2`] = `
.emotion-1 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

<button
  className="emotion-1"
  disabled={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  tabIndex="0"
  title=""
>
  <svg
    className="emotion-0"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      list-24
    </title>
    <path
      d="M5.08 10h-3v4h3A.94.94 0 0 0 6 13v-2a.94.94 0 0 0-.88-1zM5 13H3v-2h2zm.08-10h-3v4h3A.94.94 0 0 0 6 6V4a.94.94 0 0 0-.88-1zM5 6H3V4h2zm.08 11h-3v4h3A.94.94 0 0 0 6 20v-2a.94.94 0 0 0-.88-1zM5 20H3v-2h2zM21 6H8V4h13zm.08-3H7v4h14.08A.94.94 0 0 0 22 6V4a.94.94 0 0 0-.88-1zM21 20H8v-2h13zm.08-3H7v4h14.08a.94.94 0 0 0 .92-1v-2a.94.94 0 0 0-.88-1zm0-7H7v4h14.08a.94.94 0 0 0 .92-1v-2a.94.94 0 0 0-.88-1zM21 13H8v-2h13z"
    />
  </svg>
</button>
`;

exports[`top-nav/presenters/NavActionButtonPresenter  3`] = `
.emotion-1 {
  background-color: transparent;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

<button
  className="emotion-1"
  disabled={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  tabIndex="0"
  title="title"
>
  <svg
    className="emotion-0"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      list-24
    </title>
    <path
      d="M5.08 10h-3v4h3A.94.94 0 0 0 6 13v-2a.94.94 0 0 0-.88-1zM5 13H3v-2h2zm.08-10h-3v4h3A.94.94 0 0 0 6 6V4a.94.94 0 0 0-.88-1zM5 6H3V4h2zm.08 11h-3v4h3A.94.94 0 0 0 6 20v-2a.94.94 0 0 0-.88-1zM5 20H3v-2h2zM21 6H8V4h13zm.08-3H7v4h14.08A.94.94 0 0 0 22 6V4a.94.94 0 0 0-.88-1zM21 20H8v-2h13zm.08-3H7v4h14.08a.94.94 0 0 0 .92-1v-2a.94.94 0 0 0-.88-1zm0-7H7v4h14.08a.94.94 0 0 0 .92-1v-2a.94.94 0 0 0-.88-1zM21 13H8v-2h13z"
    />
  </svg>
</button>
`;
